--- a/7-02052022/Projeto Exemplo/package.json
+++ b/7-02052022/Projeto Exemplo/package.json
@@ -14,6 +14,7 @@
   "author": "Cristian",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.2"
   }
 }
